# pyAutoMic

./: .gitattributes  LICENSE  README.md
DigitalMicrograph/: README.md
DigitalMicrograph/Remote_notebooks/: Remote_smart_eels.ipynb
DigitalMicrograph/server_software/: server.py
TEM/AutoScript/: README.md
TEM/AutoScript/notebooks/: 4Dstem.ipynb  drift_correction_AS.ipynb
TEM/DigitalMicrograph/: .gitignore  README.md  requirements.txt
TEM/DigitalMicrograph/Remote_notebooks/: Remote_smart_eels.ipynb  correction_archived.py
TEM/DigitalMicrograph/server_software/: server.py
TEM/DigitalMicrograph/tests/: DigitalMicrograph.py  test_server.py
TEM/stemOrchestrator/: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.notes  requirements.txt  setup.py
TEM/stemOrchestrator/notebooks/BO_related/DKL-surrogate/: dkl-edx-beacon-subset-sample.ipynb  dkl-edx-beacon.ipynb  dkl-edx.ipynb
TEM/stemOrchestrator/notebooks/BO_related/GP-surrogate/: defocus-tune.ipynb  sample-height-tune.ipynb  sample-height.ipynb
TEM/stemOrchestrator/notebooks/BO_related/PCA-GP/: pca-gp-HAADF-cbed.ipynb
TEM/stemOrchestrator/notebooks/LLM_related/: llm-image-understanding.ipynb
TEM/stemOrchestrator/notebooks/SAM_related/: SAM_HAADF_diffraction.ipynb  SAM_HAADF_edx.ipynb  SAM_HAADF_eels.ipynb  Segment_particles.ipynb
TEM/stemOrchestrator/notebooks/aberrations_related/: 2_AberrationCorrection.ipynb  measure_c1a1.ipynb  read_tableau.ipynb  set_aberrations.ipynb
TEM/stemOrchestrator/notebooks/atomGPT_related/: MicroscopyGPT.ipynb  SPECTRA-MicroscopyGPT-offline.ipynb  SPECTRA-MicroscopyGPT.ipynb  agapi_example.ipynb  llm-image-understanding.ipynb
TEM/stemOrchestrator/notebooks/beam_movements/: 1_beam_movement.ipynb  write_name-UTK.py  write_name.py
TEM/stemOrchestrator/notebooks/drift_related/: drift_correct_offline.ipynb  drift_correct_online.ipynb
TEM/stemOrchestrator/notebooks/finding_features_related/: 01_edge_finding.ipynb  02_thickness_N_roughness.ipynb
TEM/stemOrchestrator/notebooks/mat3ra/: ondrej_graphene_to_poscar.ipynb  structure_to_mat3ra_server.ipynb
TEM/stemOrchestrator/notebooks/multimodal-data-process/: point-wise-2d-diffraction.ipynb  point-wise-EDX-spectrum.ipynb  point-wise-EELS-spectrum.ipynb  post-process-edx.ipynb  post-process-eels.ipynb
TEM/stemOrchestrator/notebooks/pycroscopy_related/: Live_data_n_Pycroscopy.ipynb  tiff_data_n_Pycroscopy.ipynb
TEM/stemOrchestrator/notebooks/sample-exploration/: sample-explore-STEM.ipynb
TEM/stemOrchestrator/notebooks/spectrum_related/: HAADF_edx.ipynb  HAADF_eels.ipynb
TEM/stemOrchestrator/notebooks/tutorials/: 0_Autoscript_tut.ipynb  1_Autoscript_tut.ipynb
TEM/stemOrchestrator/notebooks/tutorials/Arems_2025/: Arems-2025.ipynb
TEM/stemOrchestrator/stemOrchestrator/: __init__.py  acquisition.py  hardware.py  logging_config.py  process.py  simulation.py
TEM/stemOrchestrator/stemOrchestrator/AUTOlayer/: AUTOlayerPLOT.py  AUTOlayerSTAGE.py
TEM/stemOrchestrator/stemOrchestrator/MLlayer/: MLlayerBO.py  MLlayerLLM.py  MLlayerSAM.py
